--- a/index.html
+++ b/index.html
@@ -2,93 +2,106 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Game Hứng Bóng Đơn Giản</title>
+    <title>3D City Runner</title>
     <style>
-        body { text-align: center; background: #222; color: white; font-family: sans-serif; }
-        canvas { background: #000; display: block; margin: 20px auto; border: 3px solid #fff; }
-        h1 { margin-top: 20px; }
+        body { margin: 0; overflow: hidden; font-family: sans-serif; }
+        #info { position: absolute; top: 10px; width: 100%; text-align: center; color: white; pointer-events: none; }
     </style>
 </head>
 <body>
-
-    <h1>Trò chơi: Hứng Bóng</h1>
-    <p>Sử dụng phím <b>Mũi tên Trái/Phải</b> để di chuyển</p>
-    <canvas id="gameCanvas" width="400" height="500"></canvas>
-
-    <script>
-        const canvas = document.getElementById("gameCanvas");
-        const ctx = canvas.getContext("2d");
-
-        // Khởi tạo thông số
-        let score = 0;
-        let x = canvas.width / 2; // Vị trí thanh ngang
-        const paddleWidth = 80;
-        const paddleHeight = 10;
-        let paddleX = (canvas.width - paddleWidth) / 2;
-
-        let ballX = Math.random() * canvas.width;
-        let ballY = 0;
-        let ballSpeed = 3;
-
-        // Xử lý điều khiển
-        let rightPressed = false;
-        let leftPressed = false;
-
-        document.addEventListener("keydown", (e) => {
-            if(e.key === "Right" || e.key === "ArrowRight") rightPressed = true;
-            if(e.key === "Left" || e.key === "ArrowLeft") leftPressed = true;
-        });
-        document.addEventListener("keyup", (e) => {
-            if(e.key === "Right" || e.key === "ArrowRight") rightPressed = false;
-            if(e.key === "Left" || e.key === "ArrowLeft") leftPressed = false;
-        });
-
-        function draw() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height); // Xóa khung hình cũ
-
-            // Vẽ bóng
-            ctx.beginPath();
-            ctx.arc(ballX, ballY, 10, 0, Math.PI * 2);
-            ctx.fillStyle = "#ff4757";
-            ctx.fill();
-            ctx.closePath();
-
-            // Vẽ thanh hứng
-            ctx.beginPath();
-            ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
-            ctx.fillStyle = "#2ed573";
-            ctx.fill();
-            ctx.closePath();
-
-            // Vẽ điểm số
-            ctx.font = "16px Arial";
-            ctx.fillStyle = "#fff";
-            ctx.fillText("Điểm: " + score, 8, 20);
-
-            // Di chuyển bóng
-            ballY += ballSpeed;
-
-            // Kiểm tra va chạm
-            if (ballY + 10 > canvas.height) {
-                if (ballX > paddleX && ballX < paddleX + paddleWidth) {
-                    score++;
-                    ballY = 0;
-                    ballX = Math.random() * canvas.width;
-                    ballSpeed += 0.2; // Tăng độ khó
-                } else {
-                    alert("THUA RỒI! Điểm của bạn: " + score);
-                    document.location.reload();
-                }
+    <div id="info">Sử dụng các phím mũi tên hoặc WASD để di chuyển</div>
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three@0.160.0/build/three.module.js"
             }
+        }
+    </script>
+    <script type="module">
+        import * as THREE from 'three';
 
-            // Di chuyển thanh ngang
-            if (rightPressed && paddleX < canvas.width - paddleWidth) paddleX += 7;
-            if (leftPressed && paddleX > 0) paddleX -= 7;
+        // 1. Khởi tạo Scene
+        const scene = new THREE.Scene();
+        scene.background = new THREE.Color(0x87ceeb); // Màu trời
 
-            requestAnimationFrame(draw);
+        // 2. Camera
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.set(0, 5, 10);
+
+        // 3. Renderer
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        // 4. Ánh sáng
+        const light = new THREE.DirectionalLight(0xffffff, 1);
+        light.position.set(5, 10, 7.5);
+        scene.add(light);
+        scene.add(new THREE.AmbientLight(0x404040));
+
+        // 5. Mặt đất (Đường phố)
+        const groundGeo = new THREE.PlaneGeometry(100, 1000);
+        const groundMat = new THREE.MeshPhongMaterial({ color: 0x333333 });
+        const ground = new THREE.Mesh(groundGeo, groundMat);
+        ground.rotation.x = -Math.PI / 2;
+        scene.add(ground);
+
+        // 6. Tạo các tòa nhà (Khối hộp)
+        const buildings = [];
+        for (let i = 0; i < 50; i++) {
+            const h = Math.random() * 10 + 2;
+            const bGeo = new THREE.BoxGeometry(2, h, 2);
+            const bMat = new THREE.MeshPhongMaterial({ color: Math.random() * 0xffffff });
+            const building = new THREE.Mesh(bGeo, bMat);
+            
+            // Đặt vị trí ngẫu nhiên hai bên đường
+            building.position.x = (Math.random() > 0.5 ? 1 : -1) * (Math.random() * 5 + 4);
+            building.position.z = -Math.random() * 500;
+            building.position.y = h / 2;
+            
+            scene.add(building);
+            buildings.push(building);
         }
 
-        draw();
+        // 7. Nhân vật (Khối hộp đỏ)
+        const playerGeo = new THREE.BoxGeometry(1, 1, 1);
+        const playerMat = new THREE.MeshPhongMaterial({ color: 0xff0000 });
+        const player = new THREE.Mesh(playerGeo, playerMat);
+        player.position.y = 0.5;
+        scene.add(player);
+
+        // 8. Điều khiển
+        const keys = {};
+        window.addEventListener('keydown', (e) => keys[e.key] = true);
+        window.addEventListener('keyup', (e) => keys[e.key] = false);
+
+        // 9. Vòng lặp Game
+        function animate() {
+            requestAnimationFrame(animate);
+
+            // Nhân vật tự động chạy về phía trước
+            player.position.z -= 0.1;
+
+            // Xử lý phím bấm
+            if (keys['ArrowLeft'] || keys['a']) player.position.x -= 0.1;
+            if (keys['ArrowRight'] || keys['d']) player.position.x += 0.1;
+
+            // Camera đuổi theo nhân vật
+            camera.position.z = player.position.z + 10;
+            camera.position.x = player.position.x;
+            camera.lookAt(player.position);
+
+            renderer.render(scene, camera);
+        }
+
+        animate();
+
+        // Xử lý khi resize màn hình
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
     </script>
 </body>
 </html>
